tests/allowedFlexVolumes/kubewarden.yaml
apiVersion: policies.kubewarden.io/v1alpha2
kind: ClusterAdmissionPolicy
metadata:
  name: allowedflexvolumes
spec:
  module: registry://ghcr.io/kubewarden/policies/flexvolume-drivers-psp:v1.0.17
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    operations:
    - CREATE
    - UPDATE
  mutating: false
  settings:
    allowedFlexVolumes:
      - driver: "example/lvm"
      - driver: "example/cifs"
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kubewarden
