tests/allowedFlexVolumes/kyverno.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-allowedflexvolumes
spec:
  validationFailureAction: enforce
  rules:
    - name: psp-allowedflexvolumes
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: >-
          Flexvolume types are limited
        pattern:
          spec:
            =(volumes):
              - =(flexVolume):
                  driver: "example/lvm"
